--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/labs/v16
+/ConsoleApplication1/Debug/ConsoleA.1f26fee9.tlog
+/ConsoleApplication1/Debug
